[gd_scene load_steps=10 format=2]

[ext_resource path="res://gameplay/components/AutomationPhase/AutomationPhase.gd" type="Script" id=1]
[ext_resource path="res://_dev/jahns/Resources/video_example.webm" type="VideoStream" id=2]
[ext_resource path="res://gameplay/components/Dropzone/Dropzone.tscn" type="PackedScene" id=3]
[ext_resource path="res://gameplay/resources/images/level-background.jpg" type="Texture" id=4]
[ext_resource path="res://gameplay/components/Spawner/Spawner.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 0.74902 )
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0.572549, 0.219608, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 0.396078, 0.396078, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[node name="AutomationPhase" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Margin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0

[node name="ChoicesContainer" type="VBoxContainer" parent="Margin/HBoxContainer"]
margin_right = 298.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3

[node name="Header" type="Panel" parent="Margin/HBoxContainer/ChoicesContainer"]
margin_right = 298.0
margin_bottom = 52.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.12
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="Margin/HBoxContainer/ChoicesContainer/Header"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 0
text = "Pilihan Jawaban"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body" type="Panel" parent="Margin/HBoxContainer/ChoicesContainer"]
margin_top = 56.0
margin_right = 298.0
margin_bottom = 580.0
size_flags_vertical = 3
size_flags_stretch_ratio = 1.2
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Margin/HBoxContainer/ChoicesContainer/Body"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Margin/HBoxContainer/ChoicesContainer/Body/ScrollContainer"]
margin_right = 298.0
margin_bottom = 152.0
size_flags_horizontal = 3
custom_constants/margin_right = 27
custom_constants/margin_top = 16
custom_constants/margin_left = 27
custom_constants/margin_bottom = 16

[node name="GridContainer" type="GridContainer" parent="Margin/HBoxContainer/ChoicesContainer/Body/ScrollContainer/MarginContainer"]
margin_left = 27.0
margin_top = 16.0
margin_right = 271.0
margin_bottom = 136.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="Spawner" parent="Margin/HBoxContainer/ChoicesContainer/Body/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource( 5 )]

[node name="Spawner2" parent="Margin/HBoxContainer/ChoicesContainer/Body/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource( 5 )]
margin_left = 124.0
margin_right = 244.0
texture_path = "res://_dev/jahns/Resources/pointer-default.png"

[node name="AnswerContainer" type="VBoxContainer" parent="Margin/HBoxContainer"]
margin_left = 302.0
margin_right = 601.0
margin_bottom = 580.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3

[node name="Header" type="Panel" parent="Margin/HBoxContainer/AnswerContainer"]
margin_right = 299.0
margin_bottom = 52.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.12
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="Margin/HBoxContainer/AnswerContainer/Header"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 0
text = "Slot Jawaban"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body" type="Panel" parent="Margin/HBoxContainer/AnswerContainer"]
margin_top = 56.0
margin_right = 299.0
margin_bottom = 580.0
size_flags_vertical = 3
size_flags_stretch_ratio = 1.2
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Margin/HBoxContainer/AnswerContainer/Body"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MarginContainer" type="MarginContainer" parent="Margin/HBoxContainer/AnswerContainer/Body/ScrollContainer"]
margin_right = 299.0
margin_bottom = 312.0
size_flags_horizontal = 3
custom_constants/margin_right = 27
custom_constants/margin_top = 16
custom_constants/margin_left = 27
custom_constants/margin_bottom = 16

[node name="GridContainer" type="GridContainer" parent="Margin/HBoxContainer/AnswerContainer/Body/ScrollContainer/MarginContainer"]
margin_left = 27.0
margin_top = 16.0
margin_right = 272.0
margin_bottom = 296.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="Dropzone" parent="Margin/HBoxContainer/AnswerContainer/Body/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 120.0
margin_bottom = 138.0

[node name="Dropzone2" parent="Margin/HBoxContainer/AnswerContainer/Body/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 124.0
margin_top = 0.0
margin_right = 244.0
margin_bottom = 138.0

[node name="Dropzone3" parent="Margin/HBoxContainer/AnswerContainer/Body/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 142.0
margin_right = 120.0
margin_bottom = 280.0

[node name="Dropzone4" parent="Margin/HBoxContainer/AnswerContainer/Body/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 124.0
margin_top = 142.0
margin_right = 244.0
margin_bottom = 280.0

[node name="VBoxContainer" type="VBoxContainer" parent="Margin/HBoxContainer"]
margin_left = 605.0
margin_right = 1004.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="ProgramContainer" type="VBoxContainer" parent="Margin/HBoxContainer/VBoxContainer"]
margin_right = 399.0
margin_bottom = 288.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="Header" type="Panel" parent="Margin/HBoxContainer/VBoxContainer/ProgramContainer"]
margin_right = 399.0
margin_bottom = 53.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.28
custom_styles/panel = SubResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="Margin/HBoxContainer/VBoxContainer/ProgramContainer/Header"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Margin/HBoxContainer/VBoxContainer/ProgramContainer/Header/HBoxContainer"]
margin_top = 19.0
margin_right = 299.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 8.53
text = "Program"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Run" type="Button" parent="Margin/HBoxContainer/VBoxContainer/ProgramContainer/Header/HBoxContainer"]
margin_left = 303.0
margin_top = 19.0
margin_right = 338.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/normal = SubResource( 3 )
text = "Run"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="Button" parent="Margin/HBoxContainer/VBoxContainer/ProgramContainer/Header/HBoxContainer"]
margin_left = 342.0
margin_top = 19.0
margin_right = 378.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/normal = SubResource( 4 )
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body" type="Panel" parent="Margin/HBoxContainer/VBoxContainer/ProgramContainer"]
margin_top = 57.0
margin_right = 399.0
margin_bottom = 288.0
size_flags_vertical = 3
size_flags_stretch_ratio = 1.2
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="Margin/HBoxContainer/VBoxContainer/ProgramContainer/Body"]
margin_left = -1.0
margin_right = 401.0
margin_bottom = 230.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Margin/HBoxContainer/VBoxContainer/ProgramContainer/Body/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 382.0
margin_bottom = 210.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "// Objektif: Buat 1 jus apel
[table=1]
[cell]Hello[/cell]
[/table]
1 [color=red]Apel[/color] [s]buah[/s] = [color=green]ambilBuah(...1..., ...4...)[/color]
2 Jus jus = blender(...2...)
3 sajikan(...3...)"
text = "// Objektif: Buat 1 jus apel
Hello
1 Apel buah = ambilBuah(...1..., ...4...)
2 Jus jus = blender(...2...)
3 sajikan(...3...)"
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ObjectiveVideoContainer" type="VBoxContainer" parent="Margin/HBoxContainer/VBoxContainer"]
margin_top = 292.0
margin_right = 399.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="Header" type="Panel" parent="Margin/HBoxContainer/VBoxContainer/ObjectiveVideoContainer"]
margin_right = 399.0
margin_bottom = 53.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.28
custom_styles/panel = SubResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="Margin/HBoxContainer/VBoxContainer/ObjectiveVideoContainer/Header"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Margin/HBoxContainer/VBoxContainer/ObjectiveVideoContainer/Header/HBoxContainer"]
margin_top = 19.0
margin_right = 335.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 8.53
text = "Video Objektif"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Margin/HBoxContainer/VBoxContainer/ObjectiveVideoContainer/Header/HBoxContainer"]
margin_left = 339.0
margin_top = 19.0
margin_right = 379.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/normal = SubResource( 3 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body" type="Panel" parent="Margin/HBoxContainer/VBoxContainer/ObjectiveVideoContainer"]
margin_top = 57.0
margin_right = 399.0
margin_bottom = 288.0
size_flags_vertical = 3
size_flags_stretch_ratio = 1.2
custom_styles/panel = SubResource( 2 )

[node name="VideoPlayer" type="VideoPlayer" parent="Margin/HBoxContainer/VBoxContainer/ObjectiveVideoContainer/Body"]
anchor_left = 0.0776942
anchor_right = 0.932331
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
stream = ExtResource( 2 )
autoplay = true
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="Margin/HBoxContainer/VBoxContainer/ProgramContainer/Header/HBoxContainer/Reset" to="." method="_on_Reset_pressed"]
